--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -68,10 +68,10 @@
                             Kundens personnummer
                         </th>
                         <th class="ssmall-col-admin">
-                            Första sjukdag
+                            Första kalenderdag
                         </th>
                         <th class="ssmall-col-admin">
-                            Sista sjukdag
+                            Sista kalenderdag
                         </th>
                         <th class="small-col-admin">
                             Yrkat belopp (Kr)
@@ -165,10 +165,10 @@
                             Kundens personnummer
                         </th>
                         <th class="ssmall-col-admin">
-                            Första sjukdag
+                            Första kalenderdag
                         </th>
                         <th class="ssmall-col-admin">
-                            Sista sjukdag
+                            Sista kalenderdag
                         </th>
                         <th class="small-col-admin">
                             Yrkat belopp (Kr)
@@ -265,10 +265,10 @@
                             Kundens personnummer
                         </th>
                         <th class="ssmall-col-admin">
-                            Första sjukdag
+                            Första kalenderdag
                         </th>
                         <th class="ssmall-col-admin">
-                            Sista sjukdag
+                            Sista kalenderdag
                         </th>
                         <th class="small-col-admin">
                             Yrkat belopp (Kr)
