--- a/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
@@ -67,13 +67,13 @@
                             Kundens personnummer
                         </th>
                         <th class="ssmall-col-admin">
-                            Första sjukdag
+                            Första kalenderdag
                         </th>
                         <th class="ssmall-col-admin">
-                            Sista sjukdag
+                            Sista kalenderdag
                         </th>
                         @*<th class="small-col-admin">
-                                Antal sjukdagar
+                                Antal kalenderdagar
                             </th>*@
                         <th class="small-col-admin">
                             Yrkat belopp (Kr)
@@ -174,13 +174,13 @@
                             Kundens personnummer
                         </th>
                         <th class="ssmall-col-admin">
-                            Första sjukdag
+                            Första kalenderdag
                         </th>
                         <th class="ssmall-col-admin">
-                            Sista sjukdag
+                            Sista kalenderdag
                         </th>
                         @*<th class="small-col-admin">
-                                Antal sjukdagar
+                                Antal kalenderdagar
                             </th>*@
                         <th class="small-col-admin">
                             Yrkat belopp (Kr)
@@ -280,13 +280,13 @@
                             Kundens personnummer
                         </th>
                         <th class="ssmall-col-admin">
-                            Första sjukdag
+                            Första kalenderdag
                         </th>
                         <th class="ssmall-col-admin">
-                            Sista sjukdag
+                            Sista kalenderdag
                         </th>
                         @*<th class="small-col-admin">
-                                Antal sjukdagar
+                                Antal kalenderdagar
                             </th>*@
                         <th class="small-col-admin">
                             Yrkat belopp (Kr)
