--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -72,10 +72,10 @@
                             Kundens personnummer
                         </th>
                         <th class="ssmall-col-ombud">
-                            Första sjukdag
+                            Första kalenderdag
                         </th>
                         <th class="ssmall-col-ombud">
-                            Sista sjukdag
+                            Sista kalenderdag
                         </th>
                         <th class="small-col-ombud">
                             Yrkat belopp (Kr)
@@ -168,13 +168,13 @@
                             Kundens personnummer
                         </th>
                         <th class="ssmall-col-ombud">
-                            Första sjukdag
+                            Första kalenderdag
                         </th>
                         <th class="ssmall-col-ombud">
-                            Sista sjukdag
+                            Sista kalenderdag
                         </th>
                         @*<th class="ssmall-col-ombud">
-                                Antal sjukdagar
+                                Antal kalenderdagar
                             </th>*@
                         <th class="small-col-ombud">
                             Yrkat belopp (Kr)
@@ -272,10 +272,10 @@
                             Kundens personnummer
                         </th>
                         <th class="ssmall-col-ombud">
-                            Första sjukdag
+                            Första kalenderdag
                         </th>
                         <th class="ssmall-col-ombud">
-                            Sista sjukdag
+                            Sista kalenderdag
                         </th>
                         <th class="small-col-ombud">
                             Yrkat belopp (Kr)
