--- a/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
@@ -1032,32 +1032,34 @@
                 <div class="row form-group-heading">
                     Bilagor
                 </div>
-                <div class="row">
-                    @if (Model.Documents.Where(d => d.Title == "SalaryAttachment").Any())
-                    {
+                @if (Model.Documents.Where(d => d.Title == "SalaryAttachment").Any())
+                {
+                    <div class="row row-top-margin2">
                         <div class="col col-md-5">
                             <div class="form-group line-height-12">
                                 <div class="row display-padding">
                                     <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "SalaryAttachment").FirstOrDefault().Filename}")">
-                                        Lönespecifikation, ordinarie
+                                        Lönespecifikation, ordinarie assistent
                                     </a>
                                 </div>
                             </div>
                         </div>
-                    }
-                    @if (Model.Documents.Where(d => d.Title == "DoctorsCertificate").Any())
-                    {
+                    </div>
+                }
+                @if (Model.Documents.Where(d => d.Title == "DoctorsCertificate").Any())
+                {
+                    <div class="row">
                         <div class="col col-md-5">
                             <div class="form-group line-height-12">
-                                <div class="row display-padding6">
+                                <div class="row display-padding">
                                     <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "DoctorsCertificate").FirstOrDefault().Filename}")">
-                                        Läkarintyg
+                                        Läkarintyg, ordinarie assistent
                                     </a>
                                 </div>
                             </div>
                         </div>
-                    }
-                </div>
+                    </div>
+                }
                 @if (Model.Documents.Where(d => d.Title == "TimeReport").Any())
                 {
                     <div class="row">
@@ -1139,15 +1141,15 @@
                     </div>
                     @*Activate IVO: The following commented div need to be uncommented when the IVO-check shall be activated*@
                     @*<div class="col col-md-5">
-                        <div class="form-group line-height-12">
-                            <div class="row label-padding">
-                                @Html.LabelFor(model => model.IVOCheck, htmlAttributes: new { @class = "control-label-left-align2 col-md-12" })
+                            <div class="form-group line-height-12">
+                                <div class="row label-padding">
+                                    @Html.LabelFor(model => model.IVOCheck, htmlAttributes: new { @class = "control-label-left-align2 col-md-12" })
+                                </div>
+                                <div class="row display-padding6">
+                                    @Html.DisplayFor(m => m.IVOCheck)
+                                </div>
                             </div>
-                            <div class="row display-padding6">
-                                @Html.DisplayFor(m => m.IVOCheck)
-                            </div>
-                        </div>
-                    </div>*@
+                        </div>*@
                 </div>
                 <div class="row">
                     <div class="col col-md-5">
